[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Ghostmonster_sounds.mp3" type="AudioStream" id=2]

[sub_resource type="SphereShape" id=1]
radius = 4.0

[sub_resource type="SphereShape" id=3]
radius = 20.0

[sub_resource type="SphereShape" id=2]
radius = 35.0

[node name="Enemy" type="Spatial"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 50.0
autoplay = true
max_distance = 60.0

[node name="DeathArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DeathSphere" type="CollisionShape" parent="DeathArea"]
shape = SubResource( 1 )

[node name="HearingArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HearingSphere" type="CollisionShape" parent="HearingArea"]
shape = SubResource( 3 )

[node name="FlickerArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="FlickerSphere" type="CollisionShape" parent="FlickerArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="body_entered" from="HearingArea" to="." method="_on_HearingArea_body_entered"]
[connection signal="body_exited" from="HearingArea" to="." method="_on_HearingArea_body_exited"]
[connection signal="body_entered" from="FlickerArea" to="." method="_on_FlickerArea_body_entered"]
[connection signal="body_exited" from="FlickerArea" to="." method="_on_FlickerArea_body_exited"]
